--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=demo
+
+spring.datasource.url=jdbc:mysql://localhost:3306/api_news_db?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=UTC
+spring.datasource.username=api_user
+spring.datasource.password=strongpassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.h2.console.enabled=true
